Revert "fix: text overflow in documentation containers"
This reverts commit a3133b56b2edefbb3212724607cceb0712eb4b04.

--- a/gravitee-apim-console-webui/src/management/api/documentation-v4/components/documentation-edit-page/documentation-edit-page.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/documentation-v4/components/documentation-edit-page/documentation-edit-page.component.scss
@@ -60,13 +60,3 @@ $typography: map.get(gio.$mat-theme, typography);
     gap: 8px;
   }
 }
-
-:host ::ng-deep table td {
-  word-break: break-all;
-  overflow-wrap: break-word;
-  white-space: normal;
-}
-
-:host ::ng-deep p {
-  word-wrap: break-word;
-}
